[package]
authors = ['Parallel Team']
edition = '2021'
name    = 'parallel-primitives'
version = '1.8.3'

[dependencies]
codec                   = { package = 'parity-scale-codec', version = '2.3.1', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.17', default-features = false }
frame-support           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
frame-system            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
log                     = { version = "0.4", default-features = false }
orml-oracle             = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
scale-info              = { version = '1.0', default-features = false, features = ['derive'] }
serde                   = { version = '1.0.136', optional = true }
sp-consensus-aura       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
sp-core                 = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
sp-io                   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
sp-runtime              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }
sp-std                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17', default-features = false }

[features]
default = ['std']
std     = [
  'serde',
  'codec/std',
  'sp-runtime/std',
  'sp-core/std',
  'sp-std/std',
  'sp-io/std',
  'orml-oracle/std',
  'sp-consensus-aura/std',
  'frame-system/std',
  'frame-support/std',
  'scale-info/std',
  'cumulus-primitives-core/std',
]

[lib]
doctest = false
