[package]
authors = { workspace = true }
edition = '2021'
name    = 'parallel-primitives'
version = { workspace = true }

[dependencies]
codec                   = { workspace = true, package = 'parity-scale-codec' }
cumulus-primitives-core = { workspace = true }
frame-support           = { workspace = true }
frame-system            = { workspace = true }
log                     = { workspace = true }
orml-oracle             = { workspace = true }
scale-info              = { workspace = true, features = ['derive'] }
serde                   = { workspace = true, optional = true }
sp-consensus-aura       = { workspace = true }
sp-core                 = { workspace = true }
sp-io                   = { workspace = true }
sp-runtime              = { workspace = true }
sp-std                  = { workspace = true }

[features]
default = ['std']
std     = [
  'serde',
  'codec/std',
  'sp-runtime/std',
  'sp-core/std',
  'sp-std/std',
  'sp-io/std',
  'orml-oracle/std',
  'sp-consensus-aura/std',
  'frame-system/std',
  'frame-support/std',
  'scale-info/std',
  'cumulus-primitives-core/std',
]

[lib]
doctest = false
