[package]
authors = { workspace = true }
edition = '2021'
name    = 'parallel-support'
version = '1.9.8'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec           = { package = 'parity-scale-codec', version = '3.1.5', features = ['max-encoded-len'], default-features = false }
frame-support   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
log             = { version = '0.4', default-features = false }
num-bigint      = { default-features = false, version = '0.4' }
num-traits      = { default-features = false, version = '0.2' }
scale-info      = { version = '2.1', default-features = false, features = ['derive'] }
serde           = { version = '1.0.136', features = ['derive'], optional = true }
sp-core         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
sp-io           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
sp-runtime      = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
sp-std          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36', default-features = false }
substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', default-features = false }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.36' }

[features]
default = ['std']
std     = [
  'serde',
  'codec/std',
  'frame-support/std',
  'sp-runtime/std',
  'scale-info/std',
  'sp-std/std',
  'num-bigint/std',
  'num-traits/std',
  'sp-core/std',
]

try-runtime = ['frame-support/try-runtime']

[lib]
doctest = false

[package.metadata.cargo-udeps.ignore]
normal = ['frame-support']
