[package]
authors = { workspace = true }
edition = '2021'
name    = 'parallel-support'
version = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec           = { workspace = true, features = ['max-encoded-len'] }
frame-support   = { workspace = true }
log             = { workspace = true }
num-bigint      = { workspace = true }
num-traits      = { workspace = true }
scale-info      = { workspace = true, features = ['derive'] }
serde           = { workspace = true, features = ['derive'], optional = true }
sp-core         = { workspace = true }
sp-io           = { workspace = true }
sp-runtime      = { workspace = true }
sp-std          = { workspace = true }
substrate-fixed = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }

[features]
default = ['std']
std     = [
  'serde',
  'codec/std',
  'frame-support/std',
  'sp-runtime/std',
  'scale-info/std',
  'sp-std/std',
  'num-bigint/std',
  'num-traits/std',
  'sp-core/std',
]

try-runtime = ['frame-support/try-runtime']

[lib]
doctest = false

[package.metadata.cargo-udeps.ignore]
normal = ['frame-support']
