[package]
authors     = ['Parallel Team']
build       = 'build.rs'
description = 'A decentralized lending protocol which allow users to earn "double interests" from staking and lending'
edition     = '2018'
homepage    = 'https://parallel.fi'
license     = 'Apache'
name        = 'parallel-dev'
repository  = 'https://github.com/parallel-finance/parallel'
version     = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec                  = { package = 'parity-scale-codec', version = '2.2.0' }
derive_more            = '0.15.0'
frame-benchmarking     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
hex-literal            = '0.2.1'
jsonrpc-core           = '15.1.0'
log                    = '0.4.13'

primitives = { package = 'parallel-primitives', path = '../../primitives' }

pallet-loans-rpc               = { version = '3.0.0', path = '../../pallets/loans/rpc' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
vanilla-runtime                = { version = '0.0.1', path = '../../runtime/vanilla' }

sc-basic-authorship     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-chain-spec           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-cli                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10', features = ['wasmtime'] }
sc-client-api           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-consensus            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-consensus-aura       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-executor             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10', features = ['wasmtime'] }
sc-finality-grandpa     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-keystore             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-rpc                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-rpc-api              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-service              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10', features = ['wasmtime'] }
sc-telemetry            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-tracing              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-transaction-pool     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }

serde     = { version = '1.0.119', features = ['derive'] }
structopt = '0.3.8'

orml-oracle-rpc            = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }

sp-api              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-block-builder    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-blockchain       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-consensus        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-consensus-aura   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-core             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-inherents        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-keystore         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-runtime          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-timestamp        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }
sp-trie             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }

[[bin]]
name = 'parallel-dev'

[features]
default            = []
runtime-benchmarks = ['vanilla-runtime/runtime-benchmarks']
