[package]
authors     = ['Parallel Team']
build       = 'build.rs'
description = 'A decentralized lending protocol which allow users to earn "double interests" from staking and lending'
edition     = '2021'
homepage    = 'https://parallel.fi'
license     = 'Apache'
name        = 'parallel'
repository  = 'https://github.com/parallel-finance/parallel'
version     = '1.9.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec                  = { package = 'parity-scale-codec', version = '3.1.5' }
derive_more            = '0.15.0'
frame-benchmarking     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
hex-literal            = '0.3.4'
jsonrpsee              = { version = "0.14.0", features = ["server", "macros"] }
log                    = '0.4.13'

primitives = { package = 'parallel-primitives', path = '../../primitives' }

heiko-runtime                              = { path = '../../runtime/heiko' }
kerria-runtime                             = { path = '../../runtime/kerria' }
pallet-loans-rpc                           = { path = '../../pallets/loans/rpc' }
pallet-router-rpc                          = { path = '../../pallets/router/rpc' }
pallet-transaction-payment-rpc             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
parallel-runtime                           = { path = '../../runtime/parallel' }
vanilla-runtime                            = { path = '../../runtime/vanilla' }

sc-basic-authorship     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-chain-spec           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-cli                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26', features = ['wasmtime'] }
sc-client-api           = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-consensus            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-executor             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26', features = ['wasmtime'] }
sc-keystore             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-rpc                  = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-rpc-api              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-service              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26', features = ['wasmtime'] }
sc-telemetry            = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-tracing              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-transaction-pool     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }

frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
try-runtime-cli              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26', optional = true }

clap       = { version = '3.1', features = ['derive'] }
serde      = { version = '1.0.136', features = ['derive'] }
serde_json = '1.0.79'

orml-oracle-rpc            = { version = '0.4.1-dev', default-features = false }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }

sp-api              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-block-builder    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-blockchain       = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-consensus        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-consensus-aura   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-core             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-inherents        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-keystore         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-offchain         = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-runtime          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-session          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-std              = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26', default-features = false }
sp-storage          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-timestamp        = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }
sp-trie             = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }

cumulus-client-cli                      = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }
cumulus-client-collator                 = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }
cumulus-client-consensus-aura           = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }
cumulus-client-network                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }
cumulus-client-service                  = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }
cumulus-primitives-core                 = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }
cumulus-primitives-parachain-inherent   = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }
cumulus-relay-chain-inprocess-interface = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }
cumulus-relay-chain-interface           = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }
cumulus-relay-chain-rpc-interface       = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.26' }

polkadot-cli        = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.26', features = ['kusama-native'] }
polkadot-parachain  = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.26' }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.26' }
polkadot-service    = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.26' }

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.26' }

[[bin]]
name = 'parallel'

[features]
default            = ['std']
runtime-benchmarks = [
  'parallel-runtime/runtime-benchmarks',
  'heiko-runtime/runtime-benchmarks',
  'vanilla-runtime/runtime-benchmarks',
  'kerria-runtime/runtime-benchmarks',
  'polkadot-service/runtime-benchmarks',
]
std                = []
try-runtime        = [
  'heiko-runtime/try-runtime',
  'parallel-runtime/try-runtime',
  'vanilla-runtime/try-runtime',
  'kerria-runtime/try-runtime',
  'try-runtime-cli',
]
